closer to removing TW

--- a/app/components/my-content.hbs
+++ b/app/components/my-content.hbs
@@ -1,4 +1,4 @@
-<article class="p-8">
+<article>
   <p class='intro'>
     My goal: make it easier to build accessible websites.
   </p>
@@ -25,7 +25,7 @@
       ></span>
     </button>
     <span class='ml-3 text-sm' id='annual-billing-label'>
-      <span class='font-medium text-gray-900'>Switch mode *</span>
+      <span class='font-medium text-gray-900'>Switch to Mel Mode*</span>
     </span>
   </div>
 </article>
