--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -1,8 +1,8 @@
 {{page-title "Projects"}}
 
 <article>
-  <h2 class="mt-8">Projects</h2>
-  <p class="my-4">I've done a few projects that I particularly care about. Here are a few.</p>
+  <h2>Projects</h2>
+  <p class="py-4">It genuinely brings me joy to <em>just build websites</em>. Sometimes those websites are silly, sometimes they are open source projects with a plan and a purpose. Sometimes they are tools to help developers make more accessible websites. No matter what they are, they bring me joy.</p>
   <div class="cards mx-auto">
     <ul class="mx-auto">
         <li class="card">
@@ -31,50 +31,26 @@
         </li>
         <li class="card">
             <div class="img">
-                <img src="/assets/images/why-ember.png" alt="" role="presentation" />
+                <img src="/assets/images/continuous-a11y-social-share.png" alt="" role="presentation" />
             </div>
             <div class="text">
                 <h3>
-                    <a href="https://whyember.com">Why Ember</a>
+                    <a href="https://continuousaccessibility.com/">Continuous Accessibility</a>
                 </h3>
-                <p class="mt-8">Why Ember should be the JavaScript framework you try for your next project.</p>
-                <small class="underline">https://whyember.com/</small>
+                <p class="mt-8">Ensuring that code intended to be displayed in browsers can be continuously checked and monitored for digital accessibility requirements.</p>
+                <small class="underline">https://continuousaccessibility.com</small>
             </div>
         </li>
         <li class="card">
             <div class="img">
-                <img src="/assets/images/ember-a11y-refocus.png" alt="" role="presentation" />
+                <img src="/assets/images/learntodev.png" alt="" role="presentation" />
             </div>
             <div class="text">
                 <h3>
-                    <a href="https://github.com/ember-a11y/ember-a11y-refocus">Ember A11y Refocus</a>
+                    <a href="https://learntodev.info/">Learn to Dev</a>
                 </h3>
-                <p class="mt-8">A library that provides an accessible routing solution for Ember apps.</p>
-                <small class="underline">https://github.com/ember-a11y/ember-a11y-refocus</small>
-            </div>
-        </li>
-        <li class="card">
-            <div class="img">
-                <img src="/assets/images/a11y-automation.png" alt="" role="presentation" />
-            </div>
-            <div class="text">
-                <h3>
-                    <a href="https://a11y-automation.dev">A11y Automation Tracker</a>
-                </h3>
-                <p class="mt-8">Tracks availability of automated checks for potential a11y violations.</p>
-                <small class="underline">https://a11y-automation.dev</small>
-            </div>
-        </li>
-        <li class="card">
-            <div class="img">
-                <img src="/assets/images/how-to-fund.png" alt="" role="presentation" />
-            </div>
-            <div class="text">
-                <h3>
-                    <a href="https://pleasefunda11y.com">Please Fund A11y</a>
-                </h3>
-                <p class="mt-8">This guide outlines the places where open-source accessibility work would benefit from funding.</p>
-                <small class="underline">https://pleasefunda11y.com</small>
+                <p class="mt-8">So you want to get into building things for the web? Here are some resources to get you started; you’ll find websites, videos, podcasts, and other things!</p>
+                <small class="underline">https://learntodev.info/</small>
             </div>
         </li>
         <li class="card">
@@ -91,98 +67,50 @@
         </li>
         <li class="card">
             <div class="img">
-                <img src="/assets/images/ember-a11y-refocus.png" alt="" role="presentation" />
+                <img src="/assets/images/collective-nouns-web.png" alt="" role="presentation" />
             </div>
             <div class="text">
                 <h3>
-                    <a href="https://github.com/ember-a11y/ember-a11y-refocus">Ember A11y Refocus</a>
+                    <a href="https://collective-nouns.dev/">Collective Nouns for the Web</a>
                 </h3>
-                <p class="mt-8">A library that provides an accessible routing solution for Ember apps.</p>
-                <small class="underline">https://github.com/ember-a11y/ember-a11y-refocus</small>
+                <p class="mt-8"> While there are many examples of collective nouns available online, there are not any well-known resources for collective nouns related to the web.</p>
+                <small class="underline">https://collective-nouns.dev/</small>
             </div>
         </li>
         <li class="card">
             <div class="img">
-                <img src="/assets/images/a11y-automation.png" alt="" role="presentation" />
+                <img src="/assets/images/a11y-intro.png" alt="" role="presentation" />
             </div>
             <div class="text">
                 <h3>
-                    <a href="https://a11y-automation.dev">A11y Automation Tracker</a>
+                    <a href="https://a11y-intro.com/">Intro to Accessibility</a>
                 </h3>
-                <p class="mt-8">Tracks availability of automated checks for potential a11y violations.</p>
-                <small class="underline">https://a11y-automation.dev</small>
+                <p class="mt-8">A short introduction to the concept of accessibility for anyone, at any age, who works in any role.</p>
+                <small class="underline">https://a11y-intro.com/</small>
             </div>
         </li>
         <li class="card">
             <div class="img">
-                <img src="/assets/images/how-to-fund.png" alt="" role="presentation" />
+                <img src="/assets/images/bleach-psa.png" alt="" role="presentation" />
             </div>
             <div class="text">
                 <h3>
-                    <a href="https://pleasefunda11y.com">Please Fund A11y</a>
+                    <a href="https://isbleachsafetodrink.com/">Is Bleach Safe To Drink?</a>
                 </h3>
-                <p class="mt-8">This guide outlines the places where open-source accessibility work would benefit from funding.</p>
-                <small class="underline">https://pleasefunda11y.com</small>
+                <p class="mt-8">The PSA humanity needed.</p>
+                <small class="underline">https://isbleachsafetodrink.com/</small>
             </div>
         </li>
         <li class="card">
             <div class="img">
-                <img src="/assets/images/why-ember.png" alt="" role="presentation" />
+                <img src="/assets/images/modal-psa.png" alt="" role="presentation" />
             </div>
             <div class="text">
                 <h3>
-                    <a href="https://whyember.com">Why Ember</a>
+                    <a href="https://areyousureyouneedamodal.com/">Are you sure you need a modal?</a>
                 </h3>
-                <p class="mt-8">Why Ember should be the JavaScript framework you try for your next project.</p>
-                <small class="underline">https://whyember.com/</small>
-            </div>
-        </li>
-        <li class="card">
-            <div class="img">
-                <img src="/assets/images/ember-a11y-refocus.png" alt="" role="presentation" />
-            </div>
-            <div class="text">
-                <h3>
-                    <a href="https://github.com/ember-a11y/ember-a11y-refocus">Ember A11y Refocus</a>
-                </h3>
-                <p class="mt-8">A library that provides an accessible routing solution for Ember apps.</p>
-                <small class="underline">https://github.com/ember-a11y/ember-a11y-refocus</small>
-            </div>
-        </li>
-        <li class="card">
-            <div class="img">
-                <img src="/assets/images/a11y-automation.png" alt="" role="presentation" />
-            </div>
-            <div class="text">
-                <h3>
-                    <a href="https://a11y-automation.dev">A11y Automation Tracker</a>
-                </h3>
-                <p class="mt-8">Tracks availability of automated checks for potential a11y violations.</p>
-                <small class="underline">https://a11y-automation.dev</small>
-            </div>
-        </li>
-        <li class="card">
-            <div class="img">
-                <img src="/assets/images/how-to-fund.png" alt="" role="presentation" />
-            </div>
-            <div class="text">
-                <h3>
-                    <a href="https://pleasefunda11y.com">Please Fund A11y</a>
-                </h3>
-                <p class="mt-8">This guide outlines the places where open-source accessibility work would benefit from funding.</p>
-                <small class="underline">https://pleasefunda11y.com</small>
-            </div>
-        </li>
-        <li class="card">
-            <div class="img">
-                <img src="/assets/images/why-ember.png" alt="" role="presentation" />
-            </div>
-            <div class="text">
-                <h3>
-                    <a href="https://whyember.com">Why Ember</a>
-                </h3>
-                <p class="mt-8">Why Ember should be the JavaScript framework you try for your next project.</p>
-                <small class="underline">https://whyember.com/</small>
+                <p class="mt-8">Next time you are tempted to make a modal for some content, consider advice from the pros.</p>
+                <small class="underline">https://areyousureyouneedamodal.com/</small>
             </div>
         </li>
         <li class="card">
