--- a/app/templates/talks.hbs
+++ b/app/templates/talks.hbs
@@ -1,16 +1,16 @@
 {{page-title "Melanie Sumner's Talks"}}
 
 <article>
-    <h2 class="my-4">Talks</h2>
+    <h2 class="mb-4">Talks</h2>
     <p class="mb-8">
         Advocacy is a big part of accessibility; I quickly came to realize that if I wanted to effectively affect change, I would need to be willing to put ideas out there, in public.
         So, I decided to get over myself (stagefright, ego, "oh my god does my voice really sound like that??" etc.) and started giving talks.
         Here is a selection of the talks I've given.
     </p>
-    <div class="cards">
-        <ul>
+     <div class="cards mx-auto">
+        <ul class="mx-auto">
             {{#each @model as | talk |}}
-                <li class="card">
+                <li class="card card--talk">
                     <div class="img">
                         <img src="{{talk.img}}" alt="" role="presentation">
                     </div>
