--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,212 +1,566 @@
-@import "tailwindcss/base";
+:root {
+  --bg-color: #c7c3be;
+  --font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+*,
+::after,
+::backdrop,
+::before {
+  --tw-border-spacing-x: 0;
+  --tw-border-spacing-y: 0;
+  --tw-translate-x: 0;
+  --tw-translate-y: 0;
+  --tw-rotate: 0;
+  --tw-skew-x: 0;
+  --tw-skew-y: 0;
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  --tw-scroll-snap-strictness: proximity;
+  --tw-ring-offset-width: 0px;
+  --tw-ring-offset-color: #fff;
+  --tw-ring-color: rgb(59 130 246 / 0.5);
+  --tw-ring-offset-shadow: 0 0 #0000;
+  --tw-ring-shadow: 0 0 #0000;
+  --tw-shadow: 0 0 #0000;
+  --tw-shadow-colored: 0 0 #0000
+}
+/* some reset things */
+button,
+h1,
+h2,
+h3 {
+  font-weight: inherit
+}
 
-@import "tailwindcss/components";
-/* @import "components.css"; */
+a,
+button {
+  color: inherit
+}
 
-@import "tailwindcss/utilities";
-/* @import "utilities.css"; */
+button,
+ul {
+  margin: 0;
+  padding: 0
+}
 
-.text-blue {
-  color: #90bacb;
+.transform,
+.translate-x-0,
+.translate-x-5 {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
 }
-.text-blue-lighter {
-  color: #c6dce5;
+
+.cursor-pointer,
+[role=button],
+button {
+  cursor: pointer
 }
-.text-blue-lightest {
-  color: #ddebee;
+
+.transition,
+.transition-colors {
+  transition-duration: 150ms;
+  transition-timing-function: cubic-bezier(.4, 0, .2, 1)
 }
-.text-blue-darker {
-  color: #3b6383;
+
+.ease-in-out,
+.transition,
+.transition-colors {
+  transition-timing-function: cubic-bezier(.4, 0, .2, 1)
 }
-.text-blue-darkest {
-  color: #1d2c36;
+
+.border-transparent,
+nav ul li a {
+  border-color: transparent
 }
-.bg-blue {
-  background-color: #90bacb;
+
+h3,
+nav ul li a {
+  text-transform: uppercase
 }
-.bg-blue-lighter {
-  background-color: #c6dce5;
+
+body,
+main,
+main article {
+  min-height: 100vh
 }
-.bg-blue-lightest {
-  background-color: #ddebee;
+
+.cards>ul,
+nav ul,
+ul {
+  list-style: none
 }
-.bg-blue-darker {
-  background-color: #3b6383;
+
+.card,
+.relative {
+  position: relative
 }
-.bg-blue-darkest {
-  background-color: #1d2c36;
+
+*,
+::after,
+::before {
+  box-sizing: border-box;
+  border-width: 0;
+  border-style: solid;
+  border-color: #e5e7eb
+}
+
+::after,
+::before {
+  --tw-content: ''
+}
+
+html {
+  line-height: 1.5;
+  -webkit-text-size-adjust: 100%;
+  font-feature-settings: normal;
+  font-variation-settings: normal
 }
 
 body {
-  background-color: #c6dce5;
-  color: #1d2c36;
-  font-size: 18px;
-  line-height: 1.2;
-  @apply min-h-screen;
-}
- p {
-  font-size: 1.25rem;
-  line-height: 1.5;
- }
- 
-/* @media (min-width: 780px) {
-  body {
-    background-image: url("/assets/images/site-background.svg");
-    background-attachment: fixed;
-    background-position: bottom left, 0px 0px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-origin: border-box;
-  }
-} */
-
-main {
-  @apply min-h-screen;
-}
-
-header {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
-}
-nav {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-}
-nav ul {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-evenly;
-  list-style: none;
   margin: 0;
-  padding: 0;
-}
-nav ul li a {
-  border-color: transparent;
-  display: flex;
-  font-weight: bold;
-  text-transform: uppercase;
-  @apply p-4;
-}
-nav ul li a:visited {
-  /* use whatever the browser does */
-}
-nav ul li a:hover {
-  text-decoration: underline;
-}
-nav ul li a:focus {
-  /* use native browser focus */
-}
-nav ul li a:active {
-  transform: translateY(1px);
-}
-
-h1, h2, h3, p {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: var(--font-family);
+  font-size: 16px;
+  line-height: 1.2;
+  background-color: #2F4858;
+  color: #C7C3BE;
 }
 
 h1 {
-  /* font-family: 'analogueregular'; */
-  @apply text-5xl;
+  color: #C7C3BE;
 }
-h2 {
-  /* font-family: 'analogueregular'; */
-  font-weight:bold;
-  @apply 
-  text-4xl;
-}
+
+h1,
+h2,
 h3 {
-  font-weight: bold;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-}
-h4 {
-  font-weight: bold;
-}
-
-p a {
-  text-decoration: underline;
-}
-
-main article {
-  background-color: white;
-  border-radius: 4px;
-  height: fit-content;
-  min-height: 100vh;
-  opacity: 0.8;
-}
-.article__footer {
-  margin-top: 5rem;
-  border-top: 1px solid gray;
-
-}
-
-.intro {
-  /* font-family: 'analogueregular'; */
-  font-size: 2rem;
-  font-weight: bold;
+  font-size: inherit;
   line-height: 1;
 }
 
-/* From https://inclusive-components.design/cards/ */
-.cards > ul {
-  list-style: none;
+a {
+  text-decoration: inherit
 }
 
-.card + .card {
-  margin-top: 1.5rem;
+code {
+  font-family: ui-monospace, SFMono-Regular, monospace;
+  font-size: 1em
+}
+
+small {
+  font-size: 80%
+}
+
+button {
+  font-family: inherit;
+  font-feature-settings: inherit;
+  font-variation-settings: inherit;
+  font-size: 100%;
+  line-height: inherit;
+  text-transform: none
+}
+
+[type=button],
+button {
+  background-color: transparent;
+  background-image: none
+}
+
+::-webkit-inner-spin-button,
+::-webkit-outer-spin-button {
+  height: auto
+}
+
+::-webkit-search-decoration {
+  -webkit-appearance: none
+}
+
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  font: inherit
+}
+
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+  font-family: var(--font-family);
+}
+
+.mt-4 {
+  margin-top: 1rem
+}
+
+img,
+svg {
+  display: block;
+}
+
+img {
+  max-width: 100%;
+  height: auto
+}
+
+
+
+.pointer-events-none {
+  pointer-events: none
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto
+}
+
+.mb-4 {
+  margin-bottom: 1rem
+}
+
+.mb-8 {
+  margin-bottom: 2rem
+}
+
+.ml-3 {
+  margin-left: .75rem
+}
+
+.mt-8 {
+  margin-top: 2rem
+}
+
+.inline-block {
+  display: inline-block
+}
+
+.flex {
+  display: flex
+}
+
+.inline-flex {
+  display: inline-flex
+}
+
+header,
+nav,
+nav ul,
+nav ul li a {
+  display: flex
+}
+
+.h-5 {
+  height: 1.25rem
+}
+
+.h-6 {
+  height: 1.5rem
+}
+
+.w-11 {
+  width: 2.75rem
+}
+
+.w-5 {
+  width: 1.25rem
+}
+
+.w-6 {
+  width: 1.5rem
+}
+
+.max-w-7xl {
+  max-width: 80rem
+}
+
+.flex-shrink-0 {
+  flex-shrink: 0
+}
+
+.translate-x-0 {
+  --tw-translate-x: 0px
+}
+
+.translate-x-5 {
+  --tw-translate-x: 1.25rem
+}
+
+.items-center {
+  align-items: center
+}
+
+.justify-center {
+  justify-content: center
+}
+
+.space-x-6>:not([hidden])~:not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)))
+}
+
+.rounded-full {
+  border-radius: 9999px
+}
+
+.border-2 {
+  border-width: 2px
+}
+
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity))
+}
+
+.bg-indigo-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(79 70 229 / var(--tw-bg-opacity))
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity))
+}
+
+.p-8 {
+  padding: 2rem
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem
+}
+
+.pb-3 {
+  padding-bottom: .75rem
+}
+
+.pb-4 {
+  padding-bottom: 1rem
+}
+
+.pt-10 {
+  padding-top: 2.5rem
+}
+
+.pt-3 {
+  padding-top: .75rem
+}
+
+.pt-4 {
+  padding-top: 1rem
+}
+.pt-8 {
+  padding-top: 2rem
+}
+
+.text-center {
+  text-align: center
+}
+
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem
+}
+
+.text-sm {
+  font-size: .875rem;
+  line-height: 1.25rem
+}
+
+.font-bold {
+  font-weight: 700
+}
+
+.font-medium {
+  font-weight: 500
+}
+
+.intro,
+h2,
+h3,
+nav ul li a {
+  font-weight: 700
+}
+
+.text-gray-900 {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity))
+}
+
+.text-blue-darkest {
+  color: #1d2c36;
+}
+
+.underline {
+  text-decoration-line: underline
+}
+
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
+}
+
+.ring-0 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000)
+}
+
+.transition {
+  transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform
+}
+
+.transition-colors {
+  transition-property: background-color, border-color, color, fill, stroke
+}
+
+.duration-200 {
+  transition-duration: .2s
+}
+
+p {
+  font-size: 1.25rem;
+  line-height: 1.5
+}
+p a {
+  color: #7FD1AE;
+}
+
+header {
+  flex-flow: row wrap;
+  justify-content: space-between
+}
+
+nav {
+  align-items: center;
+  justify-content: center
+}
+
+nav ul {
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  margin: 0;
+  padding: 0
+}
+
+nav ul li a {
+  padding: 1rem
+}
+
+nav ul li a:hover,
+p a {
+  text-decoration: underline
+}
+
+nav ul li a:active {
+  transform: translateY(1px)
+}
+
+h1 {
+  font-size: 3rem;
+  line-height: 1
+}
+
+h2 {
+  font-size: 2.25rem;
+  line-height: 2.5rem
+}
+
+h3 {
+  letter-spacing: 1px
+}
+
+main article {
+  padding-top: 3rem;
+}
+
+.article__footer {
+  margin-top: 5rem;
+  border-top: 1px solid gray
+}
+
+.intro {
+  font-size: 2rem;
+  line-height: 1
+}
+
+.card+.card {
+  margin-top: 1.5rem
 }
 
 @supports (display: grid) {
-  .cards > ul {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
-      grid-column-gap: 1.5rem;
-      grid-row-gap:1.5rem;
+  .cards>ul {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+    grid-column-gap: 1.5rem;
+    grid-row-gap: 1.5rem
   }
 
-  .card + .card {
-      margin-top: 0;
+  .card+.card {
+    margin-top: 0
   }
 }
 
 .card {
+  background-color: #E7E7E4;
+  /* color: #2F4858; */
+  color: #446167;
+  /* color: #3B5359; */
   border: 1px solid;
-  border-radius: 0.25rem;
+  border-radius: .25rem;
   display: flex;
   flex-direction: column;
-  position: relative;
+  min-height: 23rem;
+  height: fit-content;
+}
+.card--talk {
+  min-height: 30rem;
 }
 
 .card .text {
   display: flex;
   flex-direction: column;
   flex: 1 0 auto;
-  padding: 1rem;
+  padding: 1rem
 }
 
+.card h3 {
+  /* color: #446167; */
+  color: #2F4858;
+}
+
+
+
 .card p {
-  max-width: 60ch;
+  max-width: 60ch
 }
 
 .card .img {
-  height: 6.5rem;
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 calc(100% - 1rem));
+  height: 7rem;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 calc(100% - 1rem))
 }
+
 .card:nth-of-type(2n) .img {
-  height: 6.5rem;
-  clip-path: polygon(0 0, 100% 0, 100% calc(100% - 1rem), 0 100%);
+  height: 7rem;
+  clip-path: polygon(0 0, 100% 0, 100% calc(100% - 1rem), 0 100%)
 }
 
 .card .img img {
   height: 100%;
   object-fit: cover;
-  width: 100%;
+  width: 100%
 }
 
 .card a {
-  text-decoration: none;
+  text-decoration: none
 }
 
 .card a::after {
@@ -215,31 +569,128 @@ main article {
   left: 0;
   position: absolute;
   right: 0;
-  top: 0;
+  top: 0
 }
 
 .card a:focus {
-  outline: none;
-  text-decoration: underline;
+  outline: 0;
+  text-decoration: underline
 }
 
-.card:focus-within, .card:hover {
-  box-shadow: 0 0 0 0.25rem;
+.card:focus-within,
+.card:hover {
+  box-shadow: 0 0 0 .25rem
 }
 
 .card:focus-within a:focus {
-  text-decoration: none;
+  text-decoration: none
 }
 
 .card small {
-  display: block;
+  display: block
 }
 
-.card .text > * + * {
-  margin-top: 0.75rem;
+.card .text>*+* {
+  margin-top: .75rem
 }
 
-.card .text > :last-child {
+.card .text>:last-child {
   margin-top: auto;
-  padding-top: 0.75rem;
+  padding-top: .75rem;
+  color: #243844;
+}
+
+.focus\:outline-none:focus {
+  outline: transparent solid 2px;
+  outline-offset: 2px
+}
+
+.focus\:ring-2:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000)
+}
+
+.focus\:ring-indigo-600:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(79 70 229 / var(--tw-ring-opacity))
+}
+
+.focus\:ring-offset-2:focus {
+  --tw-ring-offset-width: 2px
+}
+
+@media (min-width: 640px) {
+  .sm\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem
+  }
+}
+
+@media (min-width: 768px) {
+  .md\:order-1 {
+    order: 1
+  }
+
+  .md\:order-2 {
+    order: 2
+  }
+
+  .md\:mt-0 {
+    margin-top: 0
+  }
+
+  .md\:flex {
+    display: flex
+  }
+
+  .md\:items-center {
+    align-items: center
+  }
+
+  .md\:justify-between {
+    justify-content: space-between
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem
+  }
+}
+
+.link--parens {
+  text-decoration: underline;
+  color: #7FD1AE;
+  font-weight: bold;
+  font-size: 0.7em;
+  line-height: 1;
+}
+
+.article--resume h2 {
+  margin-bottom: 0.5rem;
+}
+
+.article--resume h3 {
+  padding-top: 1.618rem;
+  font-size: 1.25rem;
+  line-height: 1.1;
+  max-width: 60ch;
+  color: #DBDBD6;
+}
+.article--resume h3:first-of-type {
+  margin-top: 0;
+}
+
+.article--resume p {
+    padding-top: 0.25rem;
+    margin-bottom: 1.618rem;
+    max-width: 80ch;
+}
+
+.article--resume > p+small {
+  margin-top: -1.2rem;
+  margin-bottom: 1.618rem;
+  display: block;
 }
