--- a/app/templates/resume.hbs
+++ b/app/templates/resume.hbs
@@ -1,42 +1,44 @@
 {{page-title "Melanie Sumner's Resume"}}
-<article class="p-8">
+<article class="article--resume">
 
-<h2 class="pb-4">Work Experience</h2>
+<h2>Work Experience
+<div class="link--parens mb-8"><small><a href="https://gist.github.com/MelSumner/a0ccfcbe85131d1a7bc8645fb890df5d" rel="external, noreferrer, nolink, nofollow">(printable version)</a></small></div>
+</h2>
 
 <h3>Senior Design Systems Engineer, HashiCorp</h3>
 <p>Part of HashiCorp's Design Systems team, focusing on accessibility and Ember in design system components. Invited expert in the WAI-ARIA working group and co-editor of the Accessible Name (ACCNAME) specification. Active member of the Ember.js core framework team, leading the efforts to make Ember accessible by default.</p>
 
-<h3 class="pt-4">Senior Software Engineer, LinkedIn</h3>
+<h3>Senior Software Engineer, LinkedIn</h3>
 <p>
     Accessibility engineer working on Ember.js, the open source software(OSS) that powers LinkedIn. Created accessibility tooling for developers, specifically to enable them to craft more accessible code. Active member of the Ember.js core framework team; lead the efforts to make Ember accessible by default. Traveled and spoke about accessibility and Ember at technical and accessibility conferences world-wide. Represented LinkedIn as a member of the WAI-ARIA working group.
 </p>
 <small>Used JavaScript (Ember & Node).</small>
 
-<h3 class="pt-4">VP, Corporate & Investment Bank, JP Morgan Chase</h3>
+<h3>VP, Corporate & Investment Bank, JP Morgan Chase</h3>
 <p>
 Application architect/accessibility SME for a fully-compliant(ADA), Ember.js-based framework and member of the product management team. I led the architecture and design for new web components used in the primary corporate and investment banking application, providing instruction for accessibility patterns when needed. My team specifically focused on the strategic vision of the project. I advised new internal groups who want to use our product, wrote tutorials and articles to help the internal Ember community have the tools they needed to successfully build their applications, and regularly met with executive management to review priorities and determine the best way to meet current and future goals. I also regularly attended internal events and spoke about our product with a focus on the accessibility features.
 </p>
 <small>Used Ember, Node, HTML, CSS, and GAIA (internal cloud PAAS).</small>
 
-<h3 class="pt-4">Software Consultant, Productive Edge</h3>
+<h3>Software Consultant, Productive Edge</h3>
 <p>
     Software consultant in a senior front-end developer role. Lead developer for company's website re-design. Regularly integrated with enterprise client teams in fields such as Travel and Health Insurance. Promoted cross-functionality by regularly knowledge-sharing with designers, business analysts, project managers, and other developers.
 </p>
 <small>Used Angular(1), PHP, HTML, JS, and CSS.</small>
 
-<h3 class="pt-4">Application Analyst, Office of University Development, UNC Chapel Hill</h3>
+<h3>Application Analyst, Office of University Development, UNC Chapel Hill</h3>
 <p>
     Designed & developed responsive websites to support University fundraising efforts, including the UNC Commencement Website. Configured and maintained servers for self-hosted WordPress sites. Provided consultation for development units regarding fundraising website and email solicitation needs including SEO, accessibility, and user experience. Refactored legacy code to use responsive web design, and developed custom features for the internal CRM product.
 </p>
 <small>Used PHP, WordPress, C#, asp.net, HTML, JS, CSS, Node (for APIs) and Windows servers.</small>
 
-<h3 class="pt-4">Communications Specialist, Department of Environmental Science and Engineering, UNC Chapel Hill</h3>
+<h3>Communications Specialist, Department of Environmental Science and Engineering, UNC Chapel Hill</h3>
 <p>
     Designed and develop website and applications for internal administrative use and official department information distribution. Created custom WordPress websites for faculty. Voluntarily adopted role as Information Security Liaison- coordinated with the Information Security Office to develop end-user training, process to maintain records per University policy, and pursue additional methods of security within the department for the protection of sensitive and intellectual data.
 </p>
 <small>Used PHP, WordPress, HTML, JS, CSS and Windows Servers.</small>
 
-<h3 class="pt-4">Intelligence Analyst, United States Navy</h3>
+<h3>Intelligence Analyst, United States Navy</h3>
 <p>
     Enlisted as a Middle Eastern language and event analyst in a top-secret (SC/SCI) environment. Provided written operation and statistical analysis reports. Wrote and maintained training manuals and coordinated training schedules. Held a concurrent, voluntary appointment as an information systems security officer (ISSO). Enlistment ended with multiple decorations (see Awards) and an honorable discharge.
 </p>
