--- a/app/components/mode-man.hbs
+++ b/app/components/mode-man.hbs
@@ -1,6 +1,6 @@
-<section class="mode-man">
-    <p>Empowering Digital Inclusion: Bridging the Gap with Accessibility, Valor, and Global Insight
-</p>
+<section class="mode--man">
+    <p>Empowering Digital Inclusion: Bridging the Gap with Accessibility, Valor, and Global Insight</p>
+
     <p class="mt-4">Welcome to my corner of the web. I'm Melanie Sumner, a decorated and disabled military veteran, as well as a seasoned engineer and a trailblazer in the realm of digital accessibility. I'm the visionary behind the groundbreaking concept of <a href="https://continuousaccessibility.com">Continuous Accessibility</a>.</p>
 
     <p class="mt-4">My journey into this transformative field is a testament to my enduring commitment to technical excellence and my unshakeable belief in the power of technology to foster inclusivity.</p>
