--- a/app/components/mode-mel.hbs
+++ b/app/components/mode-mel.hbs
@@ -1,4 +1,4 @@
-<section class="mode-mel">
+<section class="mode--mel">
   <p>Bringing a reasonable approach to web development through Continuous Accessibility.</p>
   <p class="mt-4">
     I really, really care about digital accessibility. I care about making it happen. I care about it being easier for designers and developers to implement. I care about executives being able to understand it more easily. I care about it so much, it's my life's work.
