--- a/app/styles/utilities.css
+++ b/app/styles/utilities.css
@@ -275,3 +275,152 @@ video {
 [hidden] {
   display: none;
 }
+
+/* now some utilities */
+
+.pointer-events-none {
+  pointer-events: none
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto
+}
+
+.mb-4 {
+  margin-bottom: 1rem
+}
+
+.mb-8 {
+  margin-bottom: 2rem
+}
+
+.ml-3 {
+  margin-left: .75rem
+}
+
+.mt-8 {
+  margin-top: 2rem
+}
+
+.inline-block {
+  display: inline-block
+}
+
+.flex {
+  display: flex
+}
+
+.inline-flex {
+  display: inline-flex
+}
+.h-5 {
+  height: 1.25rem
+}
+
+.h-6 {
+  height: 1.5rem
+}
+
+.w-11 {
+  width: 2.75rem
+}
+
+.w-5 {
+  width: 1.25rem
+}
+
+.w-6 {
+  width: 1.5rem
+}
+
+.max-w-7xl {
+  max-width: 80rem
+}
+
+.flex-shrink-0 {
+  flex-shrink: 0
+}
+
+.translate-x-0 {
+  --tw-translate-x: 0px
+}
+
+.translate-x-5 {
+  --tw-translate-x: 1.25rem
+}
+
+.items-center {
+  align-items: center
+}
+
+.justify-center {
+  justify-content: center
+}
+
+.p-8 {
+  padding: 2rem
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem
+}
+
+.pb-3 {
+  padding-bottom: .75rem
+}
+
+.pb-4 {
+  padding-bottom: 1rem
+}
+.pb-8 {
+  padding-bottom: 2rem;
+}
+
+.pt-10 {
+  padding-top: 2.5rem
+}
+
+.pt-3 {
+  padding-top: .75rem
+}
+
+.pt-4 {
+  padding-top: 1rem
+}
+.pt-8 {
+  padding-top: 2rem
+}
+
+.text-center {
+  text-align: center
+}
+
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem
+}
+
+.text-sm {
+  font-size: .875rem;
+  line-height: 1.25rem
+}
+
+.font-bold {
+  font-weight: 700
+}
+
+.font-medium {
+  font-weight: 500
+}
