--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -1,6 +1,6 @@
 {{page-title "Projects"}}
 
-<article>
+<article class="pb-8">
   <h2>Projects</h2>
   <p class="py-4">It genuinely brings me joy to <em>just build websites</em>. Sometimes those websites are silly, sometimes they are open source projects with a plan and a purpose. Sometimes they are tools to help developers make more accessible websites. No matter what they are, they bring me joy.</p>
   <div class="cards mx-auto">
