--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -5,7 +5,7 @@
   --secondary: rgb(199, 195, 190);
   --primary: rgb(47, 72, 88);
   --contrast:rgb(193, 85, 78);
-  --contrast-light: ;
+  --contrast-light: #FE9990;
   --link-on-primary: #7FD1AE; 
   --font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -209,42 +209,7 @@ img {
 
 
 
-.pointer-events-none {
-  pointer-events: none
-}
 
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto
-}
-
-.mb-4 {
-  margin-bottom: 1rem
-}
-
-.mb-8 {
-  margin-bottom: 2rem
-}
-
-.ml-3 {
-  margin-left: .75rem
-}
-
-.mt-8 {
-  margin-top: 2rem
-}
-
-.inline-block {
-  display: inline-block
-}
-
-.flex {
-  display: flex
-}
-
-.inline-flex {
-  display: inline-flex
-}
 
 header,
 nav,
@@ -253,49 +218,7 @@ nav ul li a {
   display: flex
 }
 
-.h-5 {
-  height: 1.25rem
-}
 
-.h-6 {
-  height: 1.5rem
-}
-
-.w-11 {
-  width: 2.75rem
-}
-
-.w-5 {
-  width: 1.25rem
-}
-
-.w-6 {
-  width: 1.5rem
-}
-
-.max-w-7xl {
-  max-width: 80rem
-}
-
-.flex-shrink-0 {
-  flex-shrink: 0
-}
-
-.translate-x-0 {
-  --tw-translate-x: 0px
-}
-
-.translate-x-5 {
-  --tw-translate-x: 1.25rem
-}
-
-.items-center {
-  align-items: center
-}
-
-.justify-center {
-  justify-content: center
-}
 
 .space-x-6>:not([hidden])~:not([hidden]) {
   --tw-space-x-reverse: 0;
@@ -326,69 +249,6 @@ nav ul li a {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.p-8 {
-  padding: 2rem
-}
-
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem
-}
-
-.pb-3 {
-  padding-bottom: .75rem
-}
-
-.pb-4 {
-  padding-bottom: 1rem
-}
-
-.pt-10 {
-  padding-top: 2.5rem
-}
-
-.pt-3 {
-  padding-top: .75rem
-}
-
-.pt-4 {
-  padding-top: 1rem
-}
-.pt-8 {
-  padding-top: 2rem
-}
-
-.text-center {
-  text-align: center
-}
-
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1
-}
-
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem
-}
-
-.text-sm {
-  font-size: .875rem;
-  line-height: 1.25rem
-}
-
-.font-bold {
-  font-weight: 700
-}
-
-.font-medium {
-  font-weight: 500
-}
 
 .intro,
 h2,
@@ -461,6 +321,12 @@ p a {
 
 nav ul li a:active {
   transform: translateY(1px)
+}
+
+nav ul li a:focus-visible,
+p a:focus-visible,
+footer a:focus-visible {
+  outline: 2px solid var(--contrast-light);   
 }
 
 h1 {
@@ -549,12 +415,12 @@ main article {
 }
 
 .card .img {
-  height: 7rem;
+  height: 10rem;
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0 calc(100% - 1rem))
 }
 
 .card:nth-of-type(2n) .img {
-  height: 7rem;
+  height: 10rem;
   clip-path: polygon(0 0, 100% 0, 100% calc(100% - 1rem), 0 100%)
 }
 
@@ -579,7 +445,8 @@ main article {
 
 .card a:focus {
   outline: 0;
-  text-decoration: underline
+  text-decoration: underline;
+  text-decoration-color: var(--secondary);
 }
 
 .card:focus-within,
@@ -610,7 +477,8 @@ main article {
   outline-offset: 2px
 }
 
-.bg-secondary.focus\:ring-contrast:focus {
+.bg-secondary.focus\:ring-contrast:focus,
+.focus\:ring-contrast:focus {
   outline-width: 2px;
   outline-color: var(--secondary);
   outline-offset: 2px;
