footer link order

--- a/app/styles/utilities.css
+++ b/app/styles/utilities.css
@@ -287,6 +287,11 @@ video {
   margin-right: auto
 }
 
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .mb-4 {
   margin-bottom: 1rem
 }
