--- a/app/components/my-content.hbs
+++ b/app/components/my-content.hbs
@@ -3,9 +3,9 @@
     My goal: make it easier to build accessible websites.
   </p>
   {{#if this.isPressed}}
-    <ModeMel />
-  {{else}}
     <ModeMan />
+  {{else}}
+    <ModeMel />
   {{/if}}
 
   <div class='article__footer flex items-center'>
@@ -23,7 +23,7 @@
       ></span>
     </button>
     <span class='ml-3 text-sm' id='switch-mode'>
-      <span>Toggle <i>Mel Mode</i>*</span>
+      <span>Toggle <i>Mode</i>*</span>
     </span>
   </div>
 </article>
