--- a/app/components/my-content.hbs
+++ b/app/components/my-content.hbs
@@ -23,7 +23,7 @@
       ></span>
     </button>
     <span class='ml-3 text-sm' id='switch-mode'>
-      <span>Toggle <i>Mode</i>*</span>
+      <span>Toggle <i>AI Mode</i>*</span>
     </span>
   </div>
 </article>
